tests/fixtures/invalid/key-start-bracket.stderr
TOML parse error at line 2, column 6
  |
2 | [xyz = 5
  |      ^
Unexpected `=`
Expected `.` or `]`
While parsing a Table Header
